--- a/index.html
+++ b/index.html
@@ -2,41 +2,75 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>RUN BUDDY</title>
+
 </head>
 
 <body>
     <header>
-        <a href="<h1>RUN BUDDY</h1>"></a>
+
+        <h1><a href="#RUN-BUDDY">RUN BUDDY</a></h1>
+        <nav>
+
+            <ul>
+                <!-- List item element-->
+                <li>
+                    <!-- Anchor element -->
+                    <a href="#what-we-do">What We Do</a>
+                </li>
+                <li>
+                    <a href="#what-you-do">What You Do</a>
+                </li>
+                <li>
+                    <a href="#your-trainers">Your Trainers</a>
+                </li>
+                <li>
+                    <a href="#reach-out">Reach Out</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
-    <nav> </nav>
+    <section>
+        <div>
+            <h3>Get Started Today</h3>
+            <p>Fill out this form and one of our trainers will schedule a consult</p>
+            <form action="">
+                <label for="name">Enter Full Name:</label>
+                <input type="text" placeholder="Your Name" name="name" id="name" />
+                <label for="email">Enter email address:</label>
+                <input type="text" placeholder="Email Address" name="email" id="email" />
+                <label for="phone">Enter a telephone number:</label>
+                <input type="text" placeholder="Phone Number" name="phone" id="phone" />
+                <p>
+                    Have you worked out with a trainer before?
+                    <input type="radio" name="trainer-confirm" id="trainer-yes" />
+                    <label for="trainer-yes">Yes</label>
+                    <input type="radio" name="trainer-confirm" id="trainer-no" />
+                    <label for="trainer-no">No</label>
+                    <p>
+                        <label for="checkbox"></label>
+                        I acknowledge that I am at least 18 years of age.
+                        <input type="checkbox" age="age-confirm" id="checkbox" />
+                        <button type="submit">
+                            Get running!
+                        </button>
+                    </p>
+                </p>
 
-    <ul>
-        <!-- List item element-->
-        <li>
-            <!-- Anchor element -->
-            <a href="#what-we-do">What We Do</a>
-        </li>
-        <li>
-            <a href="#what-you-do">What You Do</a>
-        </li>
-        <li>
-            <a href="#your-trainers">Your Trainers</a>
-        </li>
-        <li>
-            <a href="#reach-out">Reach Out</a>
-        </li>
-    </ul>
+            </form>
+        </div>
+    </section>
 
     <section>
 
     </section>
 
-    <section>
+    <section>`
         <h2>What We Do</h2>
     </section>
 
@@ -54,6 +88,10 @@
 
     <footer>
         <h2>Made with love by Run Buddy.</h2>
+        <div>
+            <a href="#">Read Our Privacy Policy</a><br />
+            &copy; 2019 Run Buddy, Inc.
+        </div>
     </footer>
 
 
