--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <!-- List item element-->
                 <li>
-                    <!-- Anchor element -->
+                    <!-- Anchor element and -->
                     <a href="#what-we-do">What We Do</a>
                 </li>
                 <li>
@@ -35,17 +35,38 @@
         </nav>
     </header>
 
-    <section>
-        <div>
+    <section class="hero">
+        <div class="hero-form">
             <h3>Get Started Today</h3>
             <p>Fill out this form and one of our trainers will schedule a consult</p>
             <form action="">
-                <label for="name">Enter Full Name:</label>
-                <input type="text" placeholder="Your Name" name="name" id="name" />
-                <label for="email">Enter email address:</label>
-                <input type="text" placeholder="Email Address" name="email" id="email" />
-                <label for="phone">Enter a telephone number:</label>
-                <input type="text" placeholder="Phone Number" name="phone" id="phone" />
+
+                <p>
+                    <label for="name">Enter Full Name:</label>
+                </p>
+
+                <p>
+                    <input type="text" placeholder="Your Name" name="name" id="name" />
+                </p>
+
+                <p>
+                    <label for="email">Enter email address:</ label>
+                </p>
+
+                <p>
+                    <input type="text" placeholder="Email Address" name="email" id="email" />
+                </p>
+
+                <p>
+                    <label for="phone">Enter a telephone number:</label>
+                </p>
+
+                <span>
+                    <input type="text" placeholder="Phone Number" name="phone" id="phone" />
+                </span>
+
+                <br><br>
+
                 <p>
                     Have you worked out with a trainer before?
                     <input type="radio" name="trainer-confirm" id="trainer-yes" />
@@ -56,6 +77,7 @@
                         <label for="checkbox"></label>
                         I acknowledge that I am at least 18 years of age.
                         <input type="checkbox" age="age-confirm" id="checkbox" />
+                        <br><br>
                         <button type="submit">
                             Get running!
                         </button>
@@ -70,20 +92,117 @@
 
     </section>
 
-    <section>`
-        <h2>What We Do</h2>
+    <section id="what-we-do" class="intro">`
+        <h2 id="what-we-do">What We Do</h2>
+        <p>
+            butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct
+            trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie
+            Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings
+            narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+        </p>
     </section>
 
-    <section>
-        <h2>What You Do</h2>
+    <section id="what-you-do" class="steps">
+        <h2 class="section-title primary-border" id="what-you-do">What You Do</h2>
+        <div>
+            <img src="./assets/images/step-1.svg" alt="" />
+            <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
+            <p>You're already here, so why not?</p>
+        </div>
+
+        <div class="steps">
+            <img src="./assets/images/step-2.svg" alt="" />
+            <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
+            <p>Are you here to build muscle, lose weight, or just feel good?</p>
+        </div>
+
+        <div class="steps">
+            <img src="./assets/images/step-3.svg" alt="" />
+            <h3>Step 3: <span>Get Running.</span></h3>
+            <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+        </div>
+
+        <div class="steps">
+            <img src="./assets/images/step-4.svg" alt="" />
+            <h3>Step 4: <span>See Results.</span></h3>
+            <p>Bi-weekly checkins with your trainer will keep you focused</p>
+        </div>
+    </section>
+    <!-- first trainer -->
+    <section id="your-trainers" class="trainers">
+        <h2 class="secton-title primary-border">Meet The Trainers</h2>
+        <article class="trainer">
+            <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+            <div class="trainer-bio text-left">
+                <h3>Arron Stephens</h3>
+                <h4>Speed / Strength</h4>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi
+                    saepe culpa sed
+                    itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis
+                    repellat!
+                </p>
+            </div>
+        </article>
+        <!-- second trainer bio -->
+        <article class="trainer">
+            <div class="trainer-bio text-right">
+                <h3>Joanna Gill</h3>
+                <h4>Endurance</h4>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi
+                    saepe culpa sed
+                    itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis
+                    repellat!
+                </p>
+            </div>
+            <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+        </article>
+
+        <!-- third trainer bio -->
+        <article class="trainer">
+            <img src="./assets/images/trainer-3.jpg"
+                alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+            <div class="trainer-bio text-left">
+                <h3>Harry "the Headband" Smith</h3>
+                <h4>Strength</h4>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi
+                    saepe culpa sed
+                    itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis
+                    repellat!
+                </p>
+            </div>
+        </article>
     </section>
 
-    <section>
-        <h2>Meet The Trainers</h2>
-    </section>
+    <section id="reach-out" class="contact">
+        <h2 class="contact"> Reach Out</h2>
+        <hr class="hr">
+        <div class="contact-info">
 
-    <section>
-        <h2> Reach Out</h2>
+            <div>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3147.1079747227936!2d-120.42364418397035!3d37.92790791110593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c49129b6ac57%3A0xb56c7eb95a2cd8bd!2sMain%20St%2C%20California%2095327!5e0!3m2!1sen!2sus!4v1616426329495!5m2!1sen!2sus"></iframe>
+            </div>
+            <div>
+                <h3>Run Buddy</h3>
+                <p>
+                    Any questions or concerns before signing up?
+                    <br />
+                    Let us know and we'll be happy to talk to you!
+                </p>
+                <address>
+                    55 Main Street <br />
+                    Some Town, Ca <br />
+                    12345<br />
+                    P: 555.RUN.BUDZ (555.786.2839)<br />
+                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                </address>
+            </div>
+            </iframe>
+
+        </div>
     </section>
 
     <footer>
