--- a/index.html
+++ b/index.html
@@ -88,11 +88,18 @@
         </div>
     </section>
 
+    <div class="hero-cta">
+        <h2>Start Building Habits.</h2>
+        <p>
+          seitan heirloom post-ironic pop-up iPhone mlkshk hella selfies fashion axe occupy readymade put a bird on it messenger bag Wes Anderson Schlitz plaid Bushwick church-key lo-fi skateboard slow-carb hashtag trust fund Williamsburg biodiesel fixie farm-to-table 8-bit banjo XOXO Banksy chillwave bicycle rights retro cliche tattooed bespoke irony mumblecore Shoreditch deep v polaroid McSweeney's bitters cray gentrify tofu Marfa you probably haven't heard of them yr banh mi asymmetrical art party selvage letterpress High Life.
+        </p>
+      </div>
+
     <section>
 
     </section>
 
-    <section id="what-we-do" class="intro">`
+    <section id="what-we-do" class="intro">
         <h2 id="what-we-do">What We Do</h2>
         <p>
             butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct
